--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,5 +2,6 @@ protectSpawn: true
 boostEnabled: true
 fallDamage: false
 spawnRadius: 30
+boostStrength: 3
 boostMessage: "Drücke %key% zum boosten"
 world: "world"
